tests/paczka1/fuzzy1/92057542.err
Error in line 19: xV6JomPt A856 67,6
Error in line 23: ZQKBR8afGBV A856 340,4
Error in line 26: 3r6KWSfR S611 80,4
